made some changes to swagger as a plan to reduce number of methods and altered methods to match new response schemas
